2007-07-06  Ed Catmur  <ed@catmur.co.uk>

	* gobject/pygtype.c (pyg_param_gvalue_from_pyobject),
	(pyg_param_gvalue_as_pyobject): Applied patch from Ed Catmur to
	support G_TYPE_VALUE boxed args/signals, and add a test, Fixes
	#351072

2007-07-06  Carlos Martin  <inean@users.sf.net>

	* tests/test_gtype.py:
	* tests/testhelpermodule.c: add test for #351072

2007-07-04  Murray Cumming  <murrayc@murrayc.com>

	* gobject/pygobject.c: (pygobject_switch_to_toggle_ref):
	* gobject/pygobject.h: Rename the private struct field to 
	private_flags, because private is a C++ keyword, so this broke 
	builds of some C++ applications, such as Glom.

2007-07-02  Sebastian Granjoux  <seb.sfo@free.fr>

	reviewed by: Johan Dahlin

	* gobject/gobjectmodule.c: (pyg_gerror_exception_check):
	* tests/test_gtype.py:
	* tests/testhelpermodule.c: (_wrap_test_gerror_exception):

	Fix a bug in pyg_error_exception_check, add a test, Fixes #449879

2007-06-17  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gobject/pygobject.h: Add a flags field to PyGObject; uses
	structure space formerly occupied by the now stale "GSList
	*closures" field.

	* gobject/pygobject.c (pygobject_switch_to_toggle_ref): Do nothing
	if the wrapper is already in toggle reference mode.  Closes #447271.

	* tests/test_subtype.py: Test case for #447271.

2007-06-17  Sebastien Bacher  <seb128@ubuntu.com>

	* m4/python.m4: use python-config to get python includes
          (Closes #448173)

2007-06-16  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gobject/propertyhelper.py,
	* tests/test_properties.py: Support type=GObject or
	type=TYPE_OBJECT in the new properties API.

2007-06-06  Yevgen Muntyan  <muntyan@tamu.edu>

	OK'd by Johan

	* gobject/generate-constants.c: Return 0 from main().

	* gobject/Makefile.am: use generate-constants$(EXEEXT) instead
	of generate-constants in the constants.py target rule.

2007-05-30  Yevgen Muntyan  <muntyan@tamu.edu>

	reviewed by: Gustavo Carneiro
